--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "name": "apitypescript",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
+  },
   "license": "MIT",
   "devDependencies": {
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "knex": "^2.1.0",
+    "sqlite3": "^5.0.8"
   }
 }
