--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest"
   },
   "license": "MIT",
   "devDependencies": {
@@ -12,6 +13,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/knex": "^0.16.1",
     "express": "^4.18.1",
     "knex": "^2.1.0",
     "sqlite3": "^5.0.8"
